Initial draft of assignment

--- a/page.html
+++ b/page.html
@@ -8,16 +8,33 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Practice Assignment 1</title>
+
+
 </head>
 <body>
-
-
+<h2>Introduction to Me</h2>
+<p>Hi there. I'm Corlene. A lifelike robot with mad linguistic skillz.</p>
+<h2>What I'd like out of this class</h2>
+<p>In this class, I'd like to end up feeling really competent reading and writing JavaScript. And maybe cookies</p>
+<h2>Programming Abilities</h2>
+<ul>
+    <li>I am darned near competent in html and css.</li>
+    <li>I used to know Python but I'd need to do some work to be able to use it again.</li>
+    <li>PHP is already fading...</li>
+</ul>
 
 <!-- jQuery -->
 <script src="js/jquery-3.3.1.min.js"></script>
 <!-- Bootstrap JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 <!-- Your JavaScript goes here -->
+    <!-- JavaScript CTEC 126 -->
+    <!-- Corlene Ankrum -->
+    <!-- Practice Assignment 1 -->
+    <!-- April, 10, 2019 -->
+<script>
+    alert('You are about to enter a space between reality and napping. Ready to continue?');
+</script>
 
 </body>
 </html>
