Coded and Verified

--- a/page.html
+++ b/page.html
@@ -12,15 +12,18 @@
 
 </head>
 <body>
+    <!--information about me -->
 <h2>Introduction to Me</h2>
-<p>Hi there. I'm Corlene. A lifelike robot with mad linguistic skillz.</p>
+<p>Hi there. I'm Corlene. A lifelike robot with mad linguistic skillz. I have cats and dogs, and an almost 20-year-old female human at home. </p>
+<!-- What I want to accomplish in this class -->
 <h2>What I'd like out of this class</h2>
-<p>In this class, I'd like to end up feeling really competent reading and writing JavaScript. And maybe cookies</p>
+<p>In this class, I'd like to end up feeling really competent reading and writing JavaScript. And to have some lolz.</p>
+<!-- Programming Skillz -->
 <h2>Programming Abilities</h2>
 <ul>
-    <li>I am darned near competent in html and css.</li>
-    <li>I used to know Python but I'd need to do some work to be able to use it again.</li>
-    <li>PHP is already fading...</li>
+    <li>I am darned near competent in html and css and I like them more than I used to.</li>
+    <li>I used to know Python and really liked it but I'd need to do some work to be able to use it again.</li>
+    <li>PHP is already fading... I hated all the quotes and double-quotes.</li>
 </ul>
 
 <!-- jQuery -->
@@ -33,6 +36,7 @@
     <!-- Practice Assignment 1 -->
     <!-- April, 10, 2019 -->
 <script>
+    // An alert that shows after the page loads
     alert('You are about to enter a space between reality and napping. Ready to continue?');
 </script>
 
